# cooLauncher

./: Cargo.toml  README.md  save.json
resources/bash_scripts/: Hello_Charlotte.sh
src/: alias_manager.rs  command_alias.rs  conf.rs  desktop_shortcut.rs  domain.rs  launcher.rs  lib.rs  main.rs  saver.rs  tools.rs
src/pages/: add_alias_page.rs  add_app_page.rs  add_wine_app_page.rs  alias_page.rs  desktop_shortcut_page.rs  edit_app_page.rs  gnome_desktop_page.rs  gnome_shortcut_page.rs  mod.rs  setting_page.rs
