[package]
name = "coolauncher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
eframe = "0.31.0"
egui = "0.31.0"
egui_extras = { version = "0.31.0", features = ["image"] }
egui_file = "0.22.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
